Fixed text wrap to be "word-break"
Having the default text wrap was creating page overflow

--- a/css/common.css
+++ b/css/common.css
@@ -5,6 +5,8 @@ body{
   font-family: 'Open Sans', sans-serif;
   color: var(--main-grey);
   height: 100%;
+  margin: 0 auto;
+  word-wrap: break-word;
 }
 a{
   text-decoration: none;
