--- a/css/home.css
+++ b/css/home.css
@@ -3,10 +3,9 @@
 }
 #main{
   width: 100%;
-  height: calc(100% - 99px);
+  height: 100%;
   background-color: var(--main-grey);
   position: relative;
-  margin-top:99px;
 }
 #main .module{
   height: 100%;
